# ros2_car

./: .gitignore  README.md  README_ELI5.md
config/: vehicle_sim_arrow.rviz  vehicle_sim_urdf.rviz  vehicle_sim_urdf_tpv.rviz
downloads/mesh/: 86@1_10 scale.blend  Subaru BRZ 2014_Exterior_v2.stl
launch/: launch_rviz2.sh  vehicle_sim_joystick.py
meshes/: tt02_base_link.stl  tt02_wheel.stl
src/vehicle_sim/: CMakeLists.txt  package.xml
src/vehicle_sim/octave/: chatter_mitigation.m  fcn_pacejka.m  fcn_pacejka_combined.m  loadcsv.m  plot_output.m  slipratio_calc.m  test_pacejka.m  test_pacejka_combined.m  torque_lim.m
src/vehicle_sim/src/: PIDControl.cpp  TODO.md  Vehicle2D_genControlMap.cpp  Vehicle2D_test.cpp  compile_and_run.sh  compile_profiler_and_run.sh  compile_solvertest_and_run.sh  equilibrium_control_input.cpp  equilibrium_control_input.hpp  main  optSolver_test.cpp  static_transform_publisher.cpp  vehicle.cpp  vehicle.hpp  vehicle_2d.cpp  vehicle_2d.hpp  vehicle_2d_csvWriter.cpp  vehicle_2d_csvWriter.hpp  vehicle_2d_test.cpp  vehicle_sim_node.cpp  vehicle_sim_node.hpp
src/vehicle_sim/src/configs/: toyota_86.json  tt02.json
src/vehicle_sim/src/include/: CSVWriter.cpp  CSVWriter.hpp  OptSolver.cpp  OptSolver.hpp  PIDControl.hpp  TireConfig.cpp  TireConfig.hpp  Vehicle2D.cpp  Vehicle2D.hpp  Vehicle2DCSVWriter.cpp  Vehicle2DCSVWriter.hpp  Vehicle2DConfig.cpp  Vehicle2DConfig.hpp  Vehicle2DData.cpp  Vehicle2DData.hpp  VehicleControlCruiseControl.cpp  VehicleControlCruiseControl.hpp  VehicleInput.cpp  VehicleInput.hpp
urdf/: toyota_86.urdf  tt02.urdf
